k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: app-system
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        # By using selector label and template label, 
        # the Deployment will know how to identify
        # the pods that he has to manage.
        component: web
    spec:
      containers:
        - name: client
          image: mroobert/multi-client
          ports:
            - containerPort: 3000
