k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
  namespace: app-system
spec:
  type: ClusterIP
  selector:
     # By using selector section, the service will properly
     # select the redis deployment => redis pods
    component: redis
  ports:
    # Exposes the service within the cluster on the port 6379.
    # Other pods within the cluster can communicate with
    # the service on the specified port.
    - port: 6379
      # This is the port on which the service will send requests to,
      # that the redis pod will be listening on. The app inside the
      # container will need to be listening on this specified port.
      targetPort: 6379
