k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
  namespace: app-system
spec:
  type: ClusterIP
  selector:
     # By using selector section, the service will properly
     # select the server deployment => server pods
    component: server
  ports:
    # Exposes the service within the cluster on the port 5000.
    # Other pods within the cluster can communicate with
    # the service on the specified port.
    - port: 5000
      # This is the port on which the service will send requests to,
      # that the server pod will be listening on. The app inside the
      # container will need to be listening on this specified port.
      targetPort: 5000
