k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # is telling k8s to create an ingress controller based on nginx
    kubernetes.io/ingress.class: 'nginx'
    # enabling case insensitive regular expressions in spec -> path
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # remove the '/api' from the request
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
